<resources>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_send">Send history</string>
    <string name="history_clear_text">Clear history</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="button_ok">OK</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="title_section1">My Offers</string>
    <string name="title_section2"></string>
    <string name="title_section3"></string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="topup_country_title">Select Country</string>
    <string name="spinner_initiation">Select Denomination</string>
    <string name="sucess">Thank you for registering with Bookeey.</string>
    <string name="not_approved_contact">Dear Customer, your bookeey wallet account is still under review. You will receive an email as soon as your wallet is activated. This may take upto 24 hrs. Please check your email for the activation email!</string>
    <string name="wallet_balance_ooredoo_buy_text">Wallet Balance: </string>
    <string name="askmerchant_toscan">Ask Merchant to scan the QR code</string>
    <string name="buy_amt_to_pay">Amount to pay: </string>
    <string name="select_your_image_title">Attach Image</string>
    <string name="select_your_image">Get image from</string>
    <string name="firstname_error">Enter firstname</string>
    <string name="lastname_error">Enter \n lastname</string>
    <string name="email_error">Enter email</string>
    <string name="mobilenumber_error">Enter mobile number</string>
    <string name="civilid_error">Enter civilid</string>
    <string name="mobile_number_validation_msg">Please enter valid mobile number</string>
    <string name="activation_toast_valid_newpin_msg">Please enter 7 digit password</string>
    <string name="activation_toast_help_text">You have clicked help</string>
    <string name="login_mobile_number_msg">Enter mobile number</string>
    <string name="login_valid_mobile_number_msg">Enter valid mobile number</string>
    <string name="login_valid_password_msg">Enter valid password</string>
    <string name="activation_pending">Your account is not yet approved</string>
    <string name="activation_rejected">Your account is rejected</string>
    <string name="activation_toast_newconfirmpin_msg">Enter confirm password</string>
    <string name="app_name">BookeeyPay</string>
    <string name="app_name_dummy">NewWallet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="customer_name">Name</string>
    <string name="customer_number">XXXXXXXX</string>
    <string name="customer_current_balc_amt">Balance</string>
    <string name="recharge_wallet_txt">Recharge Wallet</string>
    <string name="send_money_txt">Buy</string>
    <string name="send_money_help">Help</string>
    <string name="more_text">More</string>
    <string name="poweredby_tv">Powered by</string>
    <string name="send_money_others">Others</string>
    <string name="mob_validation_welcome">Welcome To</string>
    <string name="mob_validation_langauge_type">Language Type</string>
    <string name="mob_validation_english">English</string>
    <string name="mob_validation_arabic">العربية</string>
    <string name="mob_validation_valid_mobile_number">Enter Mobile Number</string>
    <string name="mob_validation_submit_btn">submit</string>
    <string name="mob_validation_help">Help</string>
    <string name="mob_validation_enter_mobile_no">Enter Mobile Number</string>
    <string name="mob_validation_enter_valid_mobile_no">Please enter valid mobile number</string>
    <string name="contact_us_title">CONTACT US</string>
    <string name="contact_us_screen_office_adress">Corporate Office Address</string>
    <string name="contact_us_screen_office_adress_detail">Qibla - Fahed AlSalem Street - Kuwait Building - Floor 19</string>
    <string name="contact_us_screen_write_us">Write to us</string>
    <string name="contact_us_screen_website"></string>
    <string name="contact_us_screen_mail">customercare@bookeey.com</string>
    <string name="contact_us_screen_customer_care">Customer Care</string>
    <string name="contact_us_screen_mobile_number_whatsapp">22200001</string>
    <string name="contact_us_screen_mobile_number">22200001</string>
    <string name="contact_us_screen_connect_executive">Connect Executive</string>
    <string name="international_country_code">+92</string>
    <string name="international_mobile_no">3214074300</string>
    <string name="check_for_update_title">CHECK FOR UPDATES</string>
    <string name="check_up_to_date">Your app is now up to date</string>
    <string name="check_not_up_to_date">Your app is not up to date</string>
    <string name="current_version">Current Version is :</string>
    <string name="update">Update</string>
    <string name="check_close">close</string>
    <string name="check_update_dialogue_title">Play Store Update</string>
    <string name="check_update_dialogue_desc">Do you want to update to the latest version?</string>
    <string name="update_app_dialogue_desc">Looks like you\'re using older version of Bookeey. Update now for better performance and latest features.</string>
    <string name="send_money_international_transfer_amt">Transfer Amount</string>
    <string name="send_money_international_receiver_amt">Receivers Amount</string>
    <string name="ooredoo_sendmoney_kd_amount">KD</string>
    <string name="ooredoo_sendmoney_pkr_amount">PKR</string>
    <string name="sendmoney_kd_edit_text">50</string>
    <string name="not_approved_dear_text">Dear Customer,</string>
    <string name="sendmoney_pkr_edit_text">16,000</string>
    <string name="ooredoo_sendmoney_international_pin">PIN</string>
    <string name="ooredoo_sendmoney_international_pin_value">xxxx</string>
    <string name="send_money_international_exchangerate">Exchange Rate: KWD1 = PKR 350</string>
    <string name="international_name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="transactions_txt">Topup/ Payment</string>
    <string name="qrcode">QRCode</string>
    <string name="chat_txt">Send Money</string>
    <string name="undo">Hide</string>
    <string name="transaction_history">Transaction History</string>
    <string name="cancel">Cancel</string>
    <string name="sub_heading1">What is Lorem Ipsum?</string>
    <string name="sub_heading1_exp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</string>
    <string name="sub_heading2">How Lorem Ipsum works?</string>
    <string name="sub_heading2_exp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</string>
    <string name="title_activity_sendmoney">Sendmoney</string>
    <string name="title_activity_success_screen">Success_screen</string>
    <string name="transaction">Transaction Is Successfull</string>
    <string name="pay">PAY</string>
    <string name="ooredoo_footer_text">Powered by</string>
    <string name="ooredoo_success_screen_registation_success">Your request is under review, you will receive an Email notification within 24 hours.</string>
    <string name="ooredoo_success_screen_registation_sms_success">Soon you will receive a mail regarding the wallet activation.</string>
    <string name="ooredoo_success_screen_close_button">CLOSE</string>
    <string name="activation_checkmark_tick">PIN Code has been successfully created</string>
    <string name="local_radio">Local</string>
    <string name="international_radio">International</string>
    <string name="send_money_title">SEND MONEY</string>
    <string name="ooredoo_sendmoney_mobileno">Mobile</string>
    <string name="ooredoo_sendmoney_amount">Amount</string>
    <string name="ooredoo_sendmoney_pin">Password</string>
    <string name="ooredoo_sendmoney_btn_proceed_text">Proceed</string>
    <string name="send_money_enter_mobile_number">Please enter mobile number</string>
    <string name="send_money_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="send_money_enter_amount">Please enter amount</string>
    <string name="send_money_amount_between">Please enter amount between</string>
    <string name="send_money_amount_between_to">to</string>
    <string name="send_money_enter_password">Please enter Password</string>
    <string name="international_code">+91 </string>
    <string name="international_number">1234567890</string>
    <string name="select_contact">Select Contact</string>
    <string name="KD_convertion">1 KD = Rs100</string>
    <string name="pin">PIN</string>
    <string name="sendmoney_confirm_payment">Confirm Payment</string>
    <string name="sendmoney_confirm_payment_status">Status</string>
    <string name="sendmoney_confirm_payment_TxnId">Txn ID</string>
    <string name="sendmoney_confirm_payment_TxnAmount">Txn Amount</string>
    <string name="sendmoney_confirm_payment_Processingfee">Processing Fee</string>
    <string name="sendmoney_confirm_payment_Totalamount">Total Amount</string>
    <string name="sendmoney_confirm_payment_customerid">Customer ID</string>
    <string name="sendmoney_confirm_payment_avl_balance">Avl.Balance</string>
    <string name="sendmoney_confirm_payment_Txn_time">Txn Time</string>
    <string name="ooredoo_sendmoney_confirmpayment_btn_str">confirm</string>
    <string name="amount">Amount(KD)</string>
    <string name="amount_1">Amount</string>
    <string name="ooredoo_splash_screen_english_language_text">Register</string>
    <string name="ooredoo_splash_screen_arabic_language_text">Arabic</string>
    <string name="app_language">English</string>
    <string name="login_title">LOGIN</string>
    <string name="login_tour">Tour</string>
    <string name="menu_home">Home</string>
    <string name="menu_manage_profile">Manage Profile</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_transaction_istory">History</string>
    <string name="change_mobile_no">Change Mobile no.</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_check_for_updates">Check For Updates</string>
    <string name="menu_exit_app">Exit App</string>
    <string name="close">CLOSE</string>
    <string name="bpoitns">BPoints</string>
    <string name="register_newflow">Signup</string>
    <string name="registration_required_newflow">Registration required</string>
    <string name="do_you_want_to_register_newflow">Do you want to register?</string>
    <string name="no_newflow">No</string>
    <string name="yes_newflow">Yes</string>
    <string name="already_registered_newflow">Already registered, please login</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="enable_biometric">Enable/Disable Biometric</string>
</resources>