<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="12">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1.4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:orientation="horizontal"
            android:paddingLeft="14dp">

            <TextView
                android:id="@+id/goto_tour_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:drawableTop="@drawable/go_tour_img"
                android:text="@string/login_tour"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/language_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_language"
                android:visibility="gone"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/coutry_flag_img"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/kuwait" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mob_validation_welcome"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/blue"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:src="@drawable/bookeey_newlogo2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:gravity="bottom|center"
        android:text="@string/mob_validation_langauge_type"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/mob_number_val_language_rg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/mob_number_val_language_english_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mob_validation_english" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:button="@null"
            android:gravity="right"
            android:text="@string/mob_validation_arabic" />

        <RadioButton
            android:id="@+id/mob_number_val_language_arabic_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></RadioButton>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/mob_validation_valid_mobile_number"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/mobile_number_validation_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="8"
        android:textColor="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"></LinearLayout>

    <Button
        android:id="@+id/mobile_number_validation_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_weight="1"
        android:background="@drawable/registration_btn_submit_bg"
        android:text="@string/mob_validation_submit_btn"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/mobile_number_validation_help_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.5"
        android:gravity="top|center"
        android:text="@string/mob_validation_help"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:visibility="gone"></LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:scaleType="fitXY"
        android:src="@drawable/splash_android" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">


    </LinearLayout>

</LinearLayout>