<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/otp_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/gold"
        android:gravity="center">


        <TextView
            android:id="@+id/otp_edit_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/registration_required_newflow"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="20sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/otp_inner_relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ypc_getAmoint_getAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/do_you_want_to_register_newflow"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:textSize="5dp"
            android:singleLine="true" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_inner_relative_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mainmenu_newflow_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_border_new_flow_alert"
            android:text="@string/login_title"
            android:textAllCaps="true"
            android:textColor="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/mainmenu_newflow_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_border_new_flow_alert"
            android:text="@string/register_newflow"
            android:textAllCaps="true"
            android:textColor="@color/blue" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/already_registered_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/already_registered_layout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/already_registered_newflow"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:visibility="invisible"
            android:textSize="5dp"
            android:singleLine="true" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_inner_relative_layout"
        android:layout_marginBottom="10dp"


       >



        <TextView
            android:id="@+id/mainmenu_newflow_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/blue" />
    </RelativeLayout>

</LinearLayout>